Ajout constructeur des entités, ajout début de login, register et invitation

--- a/templates/member/register.html.twig
+++ b/templates/member/register.html.twig
@@ -28,7 +28,7 @@
                 </td>
             </tr>
        </table>
-       <button id="register-button" type="submit"></button> 
+       <button id="register-button" type="submit">S'enregister</button> 
     </form>
 </div>
 <script defer>
