--- a/templates/member/login.html.twig
+++ b/templates/member/login.html.twig
@@ -1,41 +1,36 @@
-{{msg | default('')}}
-<!DOCTYPE html>
-<html lang="fr" dir="ltr">
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Connexion</title>
-</head>
-<body>
-<nav class="cyan darken-4">
-    <div class="nav-wrapper" >
-        <a href="" class="brand-logo">Gestion de projets</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="register">S'inscrire</a></li>
-        </ul>
-    </div>
-</nav>
-<div id="login-container">
-    <form id="login-formular" action="login" method="POST" enctype="multipart/form-data">
-        <div class="row">
-            <div class="col s12 m6 offset-m3">
-                <div class="card center-align mg">
-                    <div class="card-content">
-                        <span class="card-title">Connexion</span>
-                        <div class="input-field">
-                            <input id="email" name="email" type="email" minlength="5" maxlength="50" class="validate" placeholder="votre Email" required />
+{% extends   "base.html.twig" %}
+
+{% block title %}Connexion{% endblock %}
+
+{% block body %}
+    <nav class="cyan darken-4">
+        <div class="nav-wrapper" >
+            <a href="" class="brand-logo">Gestion de projets</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="register">S'inscrire</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div id="login-container" style="margin-top:10%;">
+        <form id="login-formular" action="login" method="POST" enctype="multipart/form-data">
+            <div class="row">
+                <div class="col s12 m6 offset-m3">
+                    <div class="card center-align mg">
+                        <div class="card-content">
+                            <span class="card-title">Connexion</span>
+                            <div class="input-field">
+                                <input id="email" name="email" type="email" minlength="5" maxlength="50" class="validate" placeholder="votre Email" required />
+                            </div>
+                            <div class="input-field">
+                                <input id="password" name="password" type="password" minlength="8" maxlength="50" class="validate" placeholder="votre mot de passe"required />
+                            </div>
+                            <button id="login-button" class="btn waves-effect waves-light"  type="submit">Se connecter</button>
+                            <a class="btn waves-effect waves-light red" href="/">Annuler</a>
+                            {{msg | default('')}}
                         </div>
-                        <div class="input-field">
-                            <input id="password" name="password" type="password" minlength="8" maxlength="50" class="validate" placeholder="votre mot de passe"required />
-                        </div>
-                        <button id="login-button" class="btn waves-effect waves-light"  type="submit">Se connecter</button>
-                        <a class="btn waves-effect waves-light red" href="/">Annuler</a>
                     </div>
                 </div>
             </div>
-        </div>
-
-    </form>
-</div>
-</body>
+        </form>
+    </div>
+{% endblock %}
