--- a/templates/member/register.html.twig
+++ b/templates/member/register.html.twig
@@ -1,64 +1,63 @@
-{{msg | default('')}}
+{% extends   "base.html.twig" %}
 
-<head>
-    <!--Import materialize.css-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
-    <link rel="stylesheet" href="../css/style.css">
-        <title>Inscription</title>
-</head>
-<body>
-<nav class="cyan darken-4">
-    <div class="nav-wrapper" >
-        <a href="" class="brand-logo">Gestion de projets</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
-            <li><a href="login">Se connecter</a></li>
-        </ul>
-    </div>
-</nav>
-<div id="register-container">
-    <div class="row">
+{% block title %}Inscription{% endblock %}
 
-    <form id="register-formular" action="register" method="POST" enctype="multipart/form-data">
+{% block body %}
+    <nav class="cyan darken-4">
+        <div class="nav-wrapper" >
+            <a href="" class="brand-logo">Gestion de projets</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="login">Se connecter</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div id="register-container" style="margin-top:10%;">
         <div class="row">
-            <div class="col s12 m6 offset-m3">
-                <div class="card center-align mg">
-                    <div class="card-content">
-                        <span class="card-title">Inscription</span>
-                        <div class="input-field">
-                            <input id="pseudo" name="pseudo" type="text" class="validate" placeholder="votre pseudo" minlength="8" maxlength="50" required />
-                        </div>
-                        <div class="input-field">
-                            <input id="email" name="email" type="email" minlength="5" maxlength="50" class="validate" placeholder="votre Email" required />
-                        </div>
-                        <div class="input-field" >
-                            <input id="password" name="password" type="password" minlength="8" maxlength="50" class="validate" placeholder="votre mot de passe"required />
-                        </div>
-                        <div class="input-field" >
-                            <input id="password-confirm" name="password-confirm" type="password" minlength="8" maxlength="50" class="validate" placeholder="confirmez votre mot de passe"required />
-                        </div>
+            <form id="register-formular" action="register" method="POST" enctype="multipart/form-data">
+                <div class="row">
+                    <div class="col s12 m6 offset-m3">
+                        <div class="card center-align mg">
+                            <div class="card-content">
+                                <span class="card-title">Inscription</span>
+                                <div class="input-field">
+                                    <input id="pseudo" name="pseudo" type="text" class="validate" placeholder="votre pseudo" minlength="8" maxlength="50" required />
+                                </div>
+                                <div class="input-field">
+                                    <input id="email" name="email" type="email" minlength="5" maxlength="50" class="validate" placeholder="votre Email" required />
+                                </div>
+                                <div class="input-field" >
+                                    <input id="password" name="password" type="password" minlength="8" maxlength="50" class="validate" placeholder="votre mot de passe"required />
+                                </div>
+                                <div class="input-field" >
+                                    <input id="password-confirm" name="password-confirm" type="password" minlength="8" maxlength="50" class="validate" placeholder="confirmez votre mot de passe"required />
+                                </div>
 
-        <button id="register-button" class="btn waves-effect waves-light"  type="submit">S'enregister</button>
-                        <a class="btn waves-effect waves-light red" href="/">Annuler</a>
+                                <button id="register-button" class="btn waves-effect waves-light"  type="submit">S'enregister</button>
+                                <a class="btn waves-effect waves-light red" href="/">Annuler</a>
+                                {{msg | default('')}}
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </form>
         </div>
-    </form>
-</div>
-</div>
-</body>
-<script defer>
-    let password = document.getElementById("password")
-    let password_confirm = document.getElementById("password_confirm");
+    </div>
+{% endblock %}
 
-    function validatePassword(){
-      if(password.value != password_confirm.value) {
-        password_confirm.setCustomValidity("Les mots de passe sont différents");
-      } else {
-        password_confirm.setCustomValidity('');
-      }
-    }
+{% block javascripts %}
+    <script defer>
+        let password = document.getElementById("password")
+        let password_confirm = document.getElementById("password_confirm");
 
-    password.onchange = validatePassword;
-    password_confirm.onkeyup = validatePassword;
-</script>
+        function validatePassword(){
+        if(password.value != password_confirm.value) {
+            password_confirm.setCustomValidity("Les mots de passe sont différents");
+        } else {
+            password_confirm.setCustomValidity('');
+        }
+        }
+
+        password.onchange = validatePassword;
+        password_confirm.onkeyup = validatePassword;
+    </script>
+{% endblock %}
