Début d'un header permettant de savoir quand on est connecté avec bouton de déconnexion. Ebauche de gestion des paramêtres sessions

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -1,8 +1,11 @@
-{% extends   "base.html.twig" %}
+{% extends "base.html.twig" %}
 
 {% block title %}Home{% endblock %}
 
 {% block body %}
+
+    {% include 'app_header.html.twig' with  {'foo': 'bar'} %}
+
     <nav class="cyan darken-4">
         <div class="nav-wrapper" >
             <a href="" class="brand-logo">Gestion de projets</a>
