--- a/templates/project/creation.html.twig
+++ b/templates/project/creation.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Création de projet{% endblock %}
 
 {% block body %}
+    {% include 'app_header.html.twig' with  {'foo': 'bar'} %}
     <nav class="cyan darken-4">
         <div class="nav-wrapper" >
             <a href="" class="brand-logo">Gestion de projets</a>
