ajout de la page project_details donnant un résumé d'un projet sélectionné

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -14,24 +14,8 @@
             </ul>
         </div>
     </nav>   
-    <div id="project-list-container" style="margin-top:10%;">
-        <div class="row">
-            <div class="col s12 m6 offset-m3">
-                <div class="card center-align mg">
-                        {% if projects %}  
-                            <div class="collection">
-                                {% for project in projects %}
-                                    <a href="#" class="collection-item"><b>{{ project.getNAME() }}</b> : {{ project.getDESCRIPTION() }} </a>
-                                {% endfor %}
-                            </div> 
-                        {% else %}
-                            <p> Vous n'avez pour l'instant aucun projet.</p>
-                            <a class="btn waves-effect waves-light" href="/new_project">Créer mon projet</a>
-                        {% endif %}
-                </div>
-            </div>
-        </div>
-    </div>
+    
+    {% include 'project/dashboard.html.twig' with  {'foo': 'bar'} %}
 
 {% endblock %}
 
