--- a/templates/member/register.html.twig
+++ b/templates/member/register.html.twig
@@ -13,33 +13,25 @@
     </nav>
     <div id="register-container" style="margin-top:10%;">
         <div class="row">
-            <form id="register-formular" action="register" method="POST" enctype="multipart/form-data">
                 <div class="row">
                     <div class="col s12 m6 offset-m3">
                         <div class="card center-align mg">
                             <div class="card-content">
-                                <span class="card-title">Inscription</span>
-                                <div class="input-field">
-                                    <input id="pseudo" name="pseudo" type="text" class="validate" placeholder="votre pseudo" minlength="8" maxlength="50" required />
-                                </div>
-                                <div class="input-field">
-                                    <input id="email" name="email" type="email" minlength="5" maxlength="50" class="validate" placeholder="votre Email" required />
-                                </div>
-                                <div class="input-field" >
-                                    <input id="password" name="password" type="password" minlength="8" maxlength="50" class="validate" placeholder="votre mot de passe"required />
-                                </div>
-                                <div class="input-field" >
-                                    <input id="password-confirm" name="password-confirm" type="password" minlength="8" maxlength="50" class="validate" placeholder="confirmez votre mot de passe"required />
-                                </div>
-
-                                <button id="register-button" class="btn waves-effect waves-light"  type="submit">S'enregister</button>
-                                <a class="btn waves-effect waves-light red" href="/">Annuler</a>
-                                {{msg | default('')}}
+                                {{ form_start(form) }}
+                                    {{ form_errors(form) }}
+                                    {{ form_row(form.name) }}
+                                    {{ form_row(form.emailAddress) }}
+                                    {{ form_row(form.password) }}
+                                    <button id="register-button" class="btn waves-effect waves-light"  type="submit">S'enregister</button>
+                                    <a class="btn waves-effect waves-light red" href="/">Annuler</a>
+                                {{ form_end(form) }}
                             </div>
                         </div>
                     </div>
                 </div>
-            </form>
+
+            
+            
         </div>
     </div>
 {% endblock %}
