--- a/templates/project/project_details.html.twig
+++ b/templates/project/project_details.html.twig
@@ -20,15 +20,15 @@
             <div class="col s12 m6 offset-m3">
                 <div class="card center-align mg">
                     <div class="card-content">
-                        <h3>{{ theProject.getNAME() }}</h3>
-                        <p>{{ theProject.getDESCRIPTION() }}</p>
+                        <h3>{{ theProject.getName() }}</h3>
+                        <p>{{ theProject.getDescription() }}</p>
                         <p>Propriétaire du projet :</p>
-                        <a href="mailto:{{ owner.getMail() }}" class="collection-item"><b>{{ owner.getPSEUDO() }}</b></a>
+                        <a href="mailto:{{ owner.getEmailAddress() }}" class="collection-item"><b>{{ owner.getName() }}</b></a>
                         <p>Collaborateurs du projet :</p>
                         {% if members is not empty %}  
                             <div class="collection">
                                 {% for member in members %}
-                                    <a href="mailto:{{ member.getMail() }}" class="collection-item"><b>{{ member.getPSEUDO() }}</b></a>
+                                    <a href="mailto:{{ member.getEmailAddress() }}" class="collection-item"><b>{{ member.getName() }}</b></a>
                                 {% endfor %}
                             </div>
                         {% else %}
