Mis a jour controller, ajout interface et controller pour lister les issues

--- a/templates/app_header.html.twig
+++ b/templates/app_header.html.twig
@@ -3,7 +3,7 @@
         <div class="nav-wrapper" >
             <a href="" class="brand-logo">Connecté en tant que {{pseudo | default('')}}</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="logout" class="right">Se déconnecter</a></li>
+                <li><a href="/logout" class="right">Se déconnecter</a></li>
             </ul>
         </div>
     </nav> 
