--- a/templates/project/creation.html.twig
+++ b/templates/project/creation.html.twig
@@ -14,25 +14,23 @@
     </nav>
     <div id="project-container" style="margin-top:10%;">
         <div class="row">
-            <form id="project-formular" action="new_project" method="POST" enctype="multipart/form-data">
                 <div class="row">
                     <div class="col s12 m6 offset-m3">
                         <div class="card center-align mg">
                             <div class="card-content">
-                                <span class="card-title">Création d'un projet</span>
-                                <div class="input-field">
-                                    <input id="title" name="title" type="text" minlength="8" maxlength="30" class="validate" placeholder="le nom de votre projet" required />
-                                </div>
-                                <div class="input-field">
-                                    <textarea id="desc" name="desc" type="desc" minlength="5" maxlength="128" class="validate" placeholder="description de votre projet" required></textarea>
-                                </div>
+                                {{ form_start(form) }}
+                                {{ form_errors(form) }}
+                                {{ form_row(form.name) }}
+                                {{ form_row(form.description) }}
+
                                 <button id="project-button" class="btn waves-effect waves-light"  type="submit">Créer le Projet</button>
                                 <a class="btn waves-effect waves-light red" href="/home">Annuler</a>
+                                {{ form_end(form) }}
                             </div>
-                        </div>
+                         </div>
                     </div>
                 </div>
-            </form>
         </div>
     </div>
+
 {% endblock %}
