--- a/templates/member/login.html.twig
+++ b/templates/member/login.html.twig
@@ -3,14 +3,8 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
-    <nav class="cyan darken-4">
-        <div class="nav-wrapper" >
-            <a href="" class="brand-logo">Gestion de projets</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="register">S'inscrire</a></li>
-            </ul>
-        </div>
-    </nav>
+    {% include 'app_header.html.twig' with  {'foo': 'bar'} %}
+
     <div id="login-container" style="margin-top:10%;">
         <form id="login-formular" action="/login" method="POST">
             <div class="row">
