--- a/templates/app_header.html.twig
+++ b/templates/app_header.html.twig
@@ -4,6 +4,7 @@
             {% if pseudo is defined %}  
             <ul id="nav-mobile" class="left hide-on-med-and-down">
                 <li><a href="#">Connecté en tant que {{pseudo | default('')}}</a></li>
+                <li><a href="/dashboard">Liste des projets</a></li>
             </ul>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="/logout">Se déconnecter</a></li>
