--- a/templates/project/dashboard.html.twig
+++ b/templates/project/dashboard.html.twig
@@ -19,7 +19,7 @@
                         </div> 
                     {% else %}
                         <p> Vous n'avez pour l'instant créé aucun projet.</p>
-                        <a class="btn waves-effect waves-light" href="/new_project">Créer mon projet</a>
+                        <a class="btn waves-effect waves-light" href="{{ path('createProject') }}">Créer mon projet</a>
                     {% endif %}
                     <p>Mes projets associés :</p>
                     {% if myLinkedProjects is not empty %}  
