--- a/templates/project/project_details.html.twig
+++ b/templates/project/project_details.html.twig
@@ -4,29 +4,22 @@
 
 {% block body %}
 
-    {% include 'app_header.html.twig' with  {'foo': 'bar'} %}
+    {% include 'app_header.html.twig' %}
 
     <div id="login-container" style="margin-top:10%;">
         <div class="row">
             <div class="col s12 m6 offset-m3">
                 <div class="card center-align mg">
                     <div class="card-content">
-                        <h3>{{ theProject.getName() }}</h3>
-                        <p>{{ theProject.getDescription() }}</p>
+                        <h3>{{ project.getName() }}</h3>
+                        <p>{{ project.getDescription() }}</p>
                         <p>Propriétaire du projet :</p>
-                        <a href="mailto:{{ owner.getEmailAddress() }}" class="collection-item"><b>{{ owner.getName() }}</b></a>
-                        <p>Collaborateurs du projet :</p>
-                        {% if members is not empty %}  
-                            <div class="collection">
-                                {% for member in members %}
-                                    <a href="mailto:{{ member.getEmailAddress() }}" class="collection-item"><b>{{ member.getName() }}</b></a>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            <p>Aucun collaborateurs.</p>
-                        {% endif %}
-                        <a class="btn waves-effect waves-light" href="/project/{{ theProject.getId() }}/edit">Editer</a>
-                        <a class="btn waves-effect waves-light red" href="/project/{{ theProject.getId() }}/delete">Supprimer</a>
+                        <p><a href="mailto:{{ owner.getEmailAddress() }}"><b>{{ owner.getName() }}</b></a></p>
+                        <a class="btn waves-effect waves-light" href="/project/{{ project.getId() }}/edit">Editer</a>
+                        <a class="btn waves-effect waves-light red" href="/project/{{ project.getId() }}/delete">Supprimer</a>
+                        <div>
+                            {% include 'project/project_members.html.twig' %}
+                        </div>
                     </div>
                 </div>
             </div>
