--- a/templates/css/style.css
+++ b/templates/css/style.css
@@ -5,20 +5,18 @@ body, html{
 
 .identification{
     width: 200px;
-    margin: 0 auto;
-    margin-top:10%;
+    margin: 10% auto 0;
 }
 
 .btn-large {
     display: block;
-    margin: 0 auto;
-    margin-bottom: 10px;
+    margin: 0 auto 10px;
     width: 100%;
 }
 
 .right {
     position: absolute;
-    right: 0px;
+    right: 0;
 }
 
 .cardmargin {
