creation de formulaire new_issue et sa template

--- a/templates/issue/issue_list.html.twig
+++ b/templates/issue/issue_list.html.twig
@@ -23,7 +23,7 @@
                     {% else %}
                         <p> Vous n'avez pour l'instant créé aucune issue.</p>
                     {% endif %}
-                    <a class="btn waves-effect waves-light" href="{#{{ path('createIssue') }} #}">Créer une issue</a>
+                    <a class="btn waves-effect waves-light" href="{{ path('createIssue') }}">Créer une issue</a>
                 </div>
             </div>
         </div>
