Ajout fonction et service pour inviter un membre dans un projet

--- a/templates/project/project_members.html.twig
+++ b/templates/project/project_members.html.twig
@@ -17,7 +17,7 @@
     {% endif %}
     <li class="collection-item">
         <form action="{{ path('inviteToProject', {'id': project.id}) }}" method="POST">
-            <input type="text" placeholder="Inviter un membre" name="memberName">
+            <input type="text" placeholder="Inviter un membre" name="memberEmail">
             <button type="submit" class="btn waves-effect">Inviter ce membre</button>
         </form>
     </li>
